# webstream

./: LICENSE  README.md
client/: index.html
server/: Cargo.toml
server/src/: main.rs
